Replace ImmutableMap to Map